Updated links in slides

--- a/slides.html
+++ b/slides.html
@@ -60,6 +60,9 @@
 	</section>
 
 	<section>
+		<p>
+			Follow along at <a href="http://votingfun.com/sdjs" target="_blank">www.votingfun.com/sdjs</a>
+		</p>
 			<img src="./img/amazon_batteries.jpg"/>
 	</section>
 
@@ -137,7 +140,7 @@
 		
 		<h3>Interactive example</h3>
 		<p>
-			<a href="./example.html" target="_blank">www.votingfun.com/sdjs</a>
+			<a href="./demo.html" target="_blank">www.votingfun.com/sdjs</a>
 		</p>
 	</section>
 
@@ -156,7 +159,7 @@
 
 	<section>
 		<p>
-			Promise Features
+			Advacned Features
 		</p>
 		<ul>
 			<li>Promise chaining</li>
